--- a/src/main/resources/application-pro.yaml
+++ b/src/main/resources/application-pro.yaml
@@ -23,3 +23,7 @@ spring:
       username: root
       password: 123456
       driver-class-name: com.mysql.jdbc.Driver
+
+  data:
+    mongodb:
+      uri: mongodb://root:root@localhost:27017/admin
